Update and rename discord-back-theme.css to dark-back-theme.css

--- a/dark-back-theme.css
+++ b/dark-back-theme.css
@@ -1,5 +1,5 @@
 .replit-ui-theme-root.dark {
-	--background-root: #0386d5;
+	--background-root: #000000;
 	--background-default: #252526;
 	--background-higher: #3e4557;
 	--background-highest: #3C445C;
