--- a/dark-back-theme.css
+++ b/dark-back-theme.css
@@ -13,10 +13,10 @@
 	--outline-dimmer: #5F677A;
 	--outline-dimmest: #4E5569;
 	--accent-primary-dimmest: #4e4c49;
-	--accent-primary-dimmer: #7289da;
+	--accent-primary-dimmer: #7e8395;
 	--accent-primary-default: #5d7ff5;
 	--accent-primary-stronger: #57ABFF;
-	--accent-primary-strongest: #B2D9FF;
+	--accent-primary-strongest: #a5ccf2;
 	--accent-positive-dimmest: #07ad06;
 	--accent-positive-dimmer: #046113;
 	--accent-positive-default: #009118;
