--- a/dark-back-theme.css
+++ b/dark-back-theme.css
@@ -16,7 +16,7 @@
 	--accent-primary-dimmer: #7e8395;
 	--accent-primary-default: #5d7ff5;
 	--accent-primary-stronger: #57ABFF;
-	--accent-primary-strongest: #a5ccf2;
+	--accent-primary-strongest: #020202;
 	--accent-positive-dimmest: #07ad06;
 	--accent-positive-dimmer: #046113;
 	--accent-positive-default: #009118;
@@ -61,7 +61,7 @@
 	--accent-blue-dimmer: #0053A6;
 	--accent-blue-default: #0079F2;
 	--accent-blue-stronger: #57ABFF;
-	--accent-blue-strongest: #B2D9FF;
+	--accent-blue-strongest: #c3c2c8;
 	--accent-blurple-dimmest: #39298A;
 	--accent-blurple-dimmer: #5239CC;
 	--accent-blurple-default: #795EFF;
