--- a/discord.repl.theme.css
+++ b/discord.repl.theme.css
@@ -1,4 +1,4 @@
-.replit-ui-theme-root.dark {
+.replit-ui-theme-root.dark, .replit-ui-theme-root.light, .replit-ui-theme-root.spooky {
 	--background-root: #2c2f33;
 	--background-default: #23272a;
 	--background-higher: #2B3245;
