--- a/starry.night.css
+++ b/starry.night.css
@@ -1,4 +1,4 @@
-.replit-ui-theme-root.dark {
+.replit-ui-theme-root.dark, .replit-ui-theme-root.light, .replit-ui-theme-root.spooky {
 	--background-root: #364a70;
 	--background-default: #2a216ac4;
 	--background-higher: #405181;
