--- a/wendits.theme.css
+++ b/wendits.theme.css
@@ -1,4 +1,4 @@
-.replit-ui-theme-root.dark {
+.replit-ui-theme-root.dark, .replit-ui-theme-root.light, .replit-ui-theme-root.spooky {
 	--background-root: #8d3131;
 	--background-default: #602020;
 	--background-higher: #8d3131;
