Read commit: e4d8937285e06ec99e44ba03bbf03852e497f35e

--- a/dark.back.theme.css
+++ b/dark.back.theme.css
@@ -1,4 +1,4 @@
-.replit-ui-theme-root.dark {
+.replit-ui-theme-root.dark, .replit-ui-theme-root.light, .replit-ui-theme-root.spooky {
 	--background-root: #000000;
 	--background-default: #252526;
 	--background-higher: #3e4557;
