--- a/monocraft.css
+++ b/monocraft.css
@@ -3,8 +3,6 @@
     src: url("https://cdn.jsdelivr.net/gh/IdreesInc/Monocraft@main/Monocraft.otf") format("opentype");
 }
 
-:root {
-    /* Prefer Monocraft, if not then use ReplitHack (default Replit font) and then monospace if ReplitHack fails to load */
-    --font-family-code: 'Monocraft','ReplitHack',monospace;
-    --background-default: green;
+body {
+    font-family: Monocraft;
 }
